Fixed some sectioning and compile errors

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -36,6 +36,8 @@
 
 \input{sections/ch2-theory_Thomas.tex}
 
+\input{sections/research_Gustavo.tex}
+
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
