--- a/report/sections/research_Gustavo.tex
+++ b/report/sections/research_Gustavo.tex
@@ -19,8 +19,9 @@
 %    drones
 %    Tracks/wheels
 %        tracks are heavier than wheels, but better for rough terrain
-\section Environment
-\subsection Resources
+\clearpage
+\section{Environment}
+\subsection{Resources}
 For the purpose of exploration and resource gathering, planets can be split into two categories. The gassy giants, and the earthlike/rocky planets[ref?].
 There is very little reason to explore a gassy giant, as they smoothly transition between gas, lquid, and solid the deeper you look[citation needed]. This means that it is extremely difficult to colonize such a planet, or build anything on it for that matter. However, they(solar system) have a relatively high helium content[citation], which is a valuable gas for research[ref?]. 
 In the other hand, earthlike planets have a larger variety of resources[citation], and it is easier to build on them. These planets are often composed largely of metals and silicon[citation needed], which is what gives them their rocky and sandy surface[citation].
