--- a/report/sections/ch2-theory_Thomas.tex
+++ b/report/sections/ch2-theory_Thomas.tex
@@ -48,7 +48,9 @@ The A* algorithm is most commonly used in video games. The algorithm determines 
 
 Simple autonomous robots navigate by the use of infrared LEDs or by the use of photo-resistors and LEDS, by following lines drawn on a surface.\\
 %http://www.ikalogic.com/line-tracking-sensors-and-algorithms/ <-- for the line tracking 
-Some autonomous robots and vehicles use multiples of different range sensors and other sensory equipment, to map and locate themselves in indoor and outdoor environments. The map that is generated can be used to keep track of static items in the environment such as structures and difference in terrain, but the map also distinguishes non-static items such as humans and other moving objects. Since the maps are created by the vehicle itself whilst exploring, this technology can be used with or without GPS\cite{rangesens}\cite{rangesensarc}. 
+Some autonomous robots and vehicles use multiples of different range sensors and other sensory equipment, to map and locate themselves in indoor and outdoor environments. The map that is generated can be used to keep track of static items in the environment such as structures and difference in terrain, but the map also distinguishes non-static items such as humans and other moving objects. Since the maps are created by the vehicle itself whilst exploring, this technology can be used with or without GPS\cite{rangesens}\cite{rangesensarc}.  Robots and vehicles have been created using this technology to explore known and unknown environments. Because of advanced algorithms and hardware these autonomous devices are capable of performing tasks more efficiently than humans, but also in places that are unsafe and hard to reach.
+
+Autonomous robots also use these tools to work together. Using a shared map, the robots can keep track of one another and either perform tasks together or separately, depending on what is required from them.
 
 \begin{figure}[H]
 	\centering
@@ -58,7 +60,7 @@ Some autonomous robots and vehicles use multiples of different range sensors and
 \end{figure}
 %http://www.jaychakravarty.com/?p=75
 
-Laser range finders and sonar arrays are used to navigate and determine the shortest possible path to a given destination. The sensor equipment is used to give the autonomous robot a sense of distance towards objects in an environment, giving it vital data regarding optimal travel directions.\cite{lasersonar}
+Laser range finders and sonar arrays are used to navigate and determine the shortest possible path to a given destination. The sensory equipment is used to give the autonomous robot a sense of distance towards objects in an environment, giving it vital data regarding optimal travel directions\cite{lasersonar}.
 
 
 %http://www.kuka-labs.com/en/service_robotics/mobile_robotics/autonomous_navigation/
