Chapter 1 initial commit

--- a/report/sections/ch1-initiatingproblem.tex
+++ b/report/sections/ch1-initiatingproblem.tex
@@ -1,2 +1,2 @@
 \section{Initiating Problem}
-How to map unknown terrains in the absence of external technology, like GPS?
+Unknown terrain mapping and navigation
