--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -1,3 +1,12 @@
 %TODO: General intro here 
+We started out the project with a brainstorming session where we discussed different problems we would like to solve. This discussion included topics like:
+\begin{itemize}
+	\item Noise pollution
+	\item Navigation using echolocation
+	\item Reusability of heat waste
+	\item Mapping unknown terrains and maze navigation
+\end{itemize}
+
+After the brainstorming session, we decided on the problem we would like to work on the most, by voting, and started to break it down further more.
 
 %TODO: 2-block diagram here about how we got to the idea.
