--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -3,10 +3,23 @@ We started out the project with a brainstorming session where we discussed diffe
 \begin{itemize}
 	\item Noise pollution
 	\item Navigation using echolocation
-	\item Reusability of heat waste
-	\item Mapping unknown terrains and maze navigation
+	\item Re-usability of heat waste
+	\item Mapping unknown terrains without any external technologies
+	\item Maze navigation
 \end{itemize}
 
 After the brainstorming session, we decided on the problem we would like to work on the most, by voting, and started to break it down further more.
 
-%TODO: 2-block diagram here about how we got to the idea.
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=.7]{images/high-level-block.pdf}
+	\caption{High level block diagram expanding upon our brainstorming session}
+	\label{fig:highlevelblock}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=.7]{images/low-level-block.pdf}
+	\caption{Low level block diagram expanding upon the common theme we found}
+	\label{fig:lowlevelblock}
+\end{figure}
