--- a/report/sections/research_Gustavo.tex
+++ b/report/sections/research_Gustavo.tex
@@ -36,13 +36,22 @@ Earthlike planets don't have a very big variation in terrain, as most of them do
 
 
 \section{Equipment}
+(low priority)
+\subsection{Drones}
+\subsection{Rovers}
 
 \section{Sensors}
+(Intro)
 \subsection{Image Based}
-(I'm not sure I should have this here)
-\subsection{Light Based}
-Light based sensors are used to measure distance. They work by emiting a pulse of light, then waiting for it to reflect back into a camera[citation needed]. They count how long it takes for the light to bounce back, and calculate the distance as {c*t/2}[citation]. They are slightly affected by the density of the medium they travel in, as light travels slower through a denser medium[citaion], however, in an atmosphere, this effect is nearly negligible[citation] (research about venus. how fast does light move there?)
-\subsection{Sound Based}
-Sound based sensors work in a similar manner to light based sensors. They measure the time it takes for sound to bounce back to it and calculate the distance as {v*t/2}[citation]. These sensors are affected much more by the density of the medium, as sound travels faster in a denser medium[citation]. (how does the speed of sound depend on the density of the medium?)
+
+\subsection{Rangefinder}
+A rangefinder is a device that measures the distance between itself, and a point some distance away from it. Rangefinders work based on the principle that the speed of an object is defined to be distance traveled over time traveled, which means that distance traveled is the speed of an object times the amount of time it traveled. Most rangefinders work on either sound or light. Both sound and light based rangefinders work by emmiting a pulse in a specific direction, and counting how long it takes for the pulse to come back. Since the pulse has traveled back and forth, the distance is calculated as {1/2*v*t}, where {v} is the speed of the pulse, and {t} is the time between the emission and the detection.
+(Image?)
+\subsubsection{Light Based}
+Light based rangefinders are slightly affected by the density of the medium they travel in, as light travels slower through a denser medium[http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf], however, in an earthlike atmospheres, this effect is nearly negligible, as light only travels 0.03\% slower in air when compared to the vacuum.[http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf] (research about venus. how fast does light move there?)
+(temperature)
+\subsubsection{Sound Based}
+Sound is also affected by the density of the medium it travels in, however, much more than when compared to light[http://www.dtic.mil/get-tr-doc/pdf?AD=ADA076060]. (how does the speed of sound depend on the density of the medium?)
+(temperature)
 \subsection{Pressure Based}
-Pressure based sensors work by simply measuring how much pressure there is in a point in space. This can be used to measure the vertical distance between two points in a planet with an atmosphere[citation].
+Pressure based sensors work by simply measuring how much pressure there is in a point in space. They can be used to measure the vertical distance between two points in a planet with an atmosphere[http://web.ist.utl.pt/ist12219/data/43.pdf, http://arxiv.org/pdf/1003.1508.pdf].
