Chapter 1 introduction added

--- a/report/sections/ch1-initiatingproblem.tex
+++ b/report/sections/ch1-initiatingproblem.tex
@@ -1,2 +1,2 @@
 \section{Initiating Problem}
-Unknown terrain mapping and navigation
+The initiating problem selected is \textit{unknown terrain mapping and navigation}.
