--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -1,5 +1,4 @@
-%TODO: General intro here 
-We started out the project with a brainstorming session where we discussed different problems we would like to solve. This discussion included topics like:
+We started out the project with a brainstorming session where we discussed different problems we would like to solve. By the end of the session, we came up with the following list of problems:
 \begin{itemize}
 	\item Noise pollution
 	\item Navigation using echolocation
@@ -8,7 +7,7 @@ We started out the project with a brainstorming session where we discussed diffe
 	\item Maze navigation
 \end{itemize}
 
-After the brainstorming session, we decided on the problem we would like to work on the most, by voting, and started to break it down further more.
+We could identify a common theme amongst these problems, which led us to the conclusion that the problem domain should be within mapping and navigations. 
 
 \begin{figure}[!h]
 	\centering
@@ -17,9 +16,14 @@ After the brainstorming session, we decided on the problem we would like to work
 	\label{fig:highlevelblock}
 \end{figure}
 
+Furthermore we decided to cut down and expand upon the problem-domain we set for ourselves.
+This led to more discussions on possible outcomes, uses and benefits of such system.
+
 \begin{figure}[!h]
 	\centering
 	\includegraphics[scale=.7]{images/low-level-block.pdf}
 	\caption{Low level block diagram expanding upon the common theme we found}
 	\label{fig:lowlevelblock}
 \end{figure}
+
+We decided to go on with the problem domain and started using a W-diagram to expand upon it further and identify the parts needed to be researched to come up with a solution.
