Added sections to main .tex file

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -38,6 +38,10 @@
 
 \input{sections/research_Gustavo.tex}
 
+\input{sections/ch2-stakeholder-analysis.tex}
+
+\input{sections/ch2-risk-analysis.tex}
+
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
