Small error fix

--- a/report/sections/research_Gustavo.tex
+++ b/report/sections/research_Gustavo.tex
@@ -8,7 +8,7 @@ In the other hand, earthlike planets have a larger variety of resources[citation
 
 \subsection{Environment}
 \subsubsection{Atmosphere}
-There are quite a few planets, in our solar system, with a negligible atmosphere[citation]. In these planets sound based sensors cannot work[refer to chapter], but light based sensors might even work better[refer to chapter]. These planets also thend to have a temperature very close to absolute zero[https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169].
+There are quite a few planets, in our solar system, with a negligible atmosphere[citation]. In these planets sound based sensors cannot work[refer to chapter], but light based sensors might even work better[refer to chapter]. These planets also thend to have a temperature very close to absolute zero. %[https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169]
 Planets with an atmosphere can be much harder to cope with. In these planets there can be threats such as, high winds, high pressure, high temperatures, corrosive gasses, and liquids. When designing equipment for such environment, the specific environment must be kept in mind.
 
 \subsubsection{Terrain}
