--- a/report/sections/research_Gustavo.tex
+++ b/report/sections/research_Gustavo.tex
@@ -1,40 +1,19 @@
 \clearpage
-\section{Environment}
-\subsection{Resources}
-For the purpose of exploration and resource gathering, planets can be split into two categories. The gassy giants, and the earthlike/rocky planets[ref?].
-There is very little reason to explore a gassy giant, as they smoothly transition between gas, lquid, and solid the deeper you look[citation needed]. This means that it is extremely difficult to colonize such a planet, or build anything on it for that matter. However, the gassy giants in our solar system have a relatively high helium content[citation], which is a valuable gas for research[ref?]. 
-In the other hand, earthlike planets have a larger variety of resources[citation?], and it is easier to build on them. These planets are often composed largely of metals and silicon[citation needed], which is what gives them their rocky and sandy surface[citation?].
-
-
-\subsection{Environment}
-\subsubsection{Atmosphere}
-There are quite a few planets, in our solar system, with a negligible atmosphere[citation]. In these planets sound based sensors cannot work[refer to chapter], but light based sensors might even work better[refer to chapter]. These planets also thend to have a temperature very close to absolute zero. %[https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169]
-Planets with an atmosphere can be much harder to cope with. In these planets there can be threats such as, high winds, high pressure, high temperatures, corrosive gasses, and liquids. When designing equipment for such environment, the specific environment must be kept in mind.
-
-\subsubsection{Terrain}
-Earthlike planets are, by definition, rocky/sandy planets, which tend to have mountains, canyons, and craters.
-Earthlike planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
-
-
-\section{Equipment}
-(low priority)
-\subsection{Drones}
-\subsection{Rovers}
-
 \section{Sensors}
-(Intro)
-\subsection{Image Based}
+%TODO: add some Intro here
 
+\subsection{Image Based}
+%TODO: Fill this in
 \subsection{Rangefinder}
-A rangefinder is a device that measures the distance between itself, and a point some distance away from it. Rangefinders work based on the principle that the speed of an object is defined to be distance traveled over time traveled, which means that distance traveled is the speed of an object times the amount of time it traveled. Most rangefinders work on either sound or light. Both sound and light based rangefinders work by emmiting a pulse in a specific direction, and counting how long it takes for the pulse to come back. Since the pulse has traveled back and forth, the distance is calculated as {1/2*v*t}, where {v} is the speed of the pulse, and {t} is the time between the emission and the detection.
+A rangefinder is a device that measures the distance between itself, and a point some distance away from it. Rangefinders work based on the principle that the speed of an object is defined to be distance traveled over time traveled, which means that distance traveled is the speed of an object times the amount of time it traveled. Most rangefinders work on either sound or light. Both sound and light based rangefinders work by emitting a pulse in a specific direction, and counting how long it takes for the pulse to come back. Since the pulse has traveled back and forth, the distance is calculated as {1/2*v*t}, where {v} is the speed of the pulse, and {t} is the time between the emission and the detection.
 (Image?)
 \subsubsection{Light Based}
-Light based rangefinders are slightly affected by the density of the medium they travel in, as light travels slower through a denser medium[http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf], however, in an earthlike atmospheres, this effect is nearly negligible, as light only travels 0.03\% slower in air when compared to the vacuum.[http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf] (research about venus. how fast does light move there?)
-(temperature)
-(refraction)
+Light based rangefinders are slightly affected by the density of the medium they travel in, as light travels slower through a denser medium[http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf], however, in an earth-like atmospheres, this effect is nearly negligible, as light only travels 0.03\% slower in air when compared to the vacuum.[http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf] %TODO: research about Venus. how fast does light move there?
+%TODO: (temperature)
+%TODO: (refraction)
 \subsubsection{Sound Based}
 Sound is also affected by the density of the medium it travels in, however, much more than when compared to light[http://www.dtic.mil/get-tr-doc/pdf?AD=ADA076060]. (how does the speed of sound depend on the density of the medium?)
-(temperature)
-(refraction?)
+%TODO: (temperature)
+%TODO: (refraction?)
 \subsection{Pressure Based}
 Pressure based sensors work by simply measuring how much pressure there is in a point in space. They can be used to measure the vertical distance between two points in a planet with an atmosphere[http://web.ist.utl.pt/ist12219/data/43.pdf, http://arxiv.org/pdf/1003.1508.pdf].
