Wrong filename + added section in main .tex file

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -36,6 +36,8 @@
 
 \input{sections/ch2-theory_Thomas.tex}
 
+\input{sections/ch2-theory_Anthony.tex}
+
 \input{sections/research_Gustavo.tex}
 
 \input{sections/ch2-stakeholder-analysis.tex}
